# xwm

./: .gitignore  LICENSE  Makefile  README.md  be.ps1  dev.md  get_sdk.sh
android/: gradle.properties  run_debug.sh  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/xwm/: ExampleInstrumentedTest.kt
android/app/src/androidTest/java/com/harmonyren/xwm/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/xwm/: MainActivity.kt
android/app/src/main/java/com/harmonyren/xwm/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/xwm/: ExampleUnitTest.kt
android/app/src/test/java/com/harmonyren/xwm/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
include/xwm/: Architecture.hpp  Dispatcher.hpp  Memory.hpp  architecture.hpp  cli.hpp  commands.hpp  core.hpp  defs.hpp  memory.hpp  utils.hpp  version.hpp
src/: Dispatcher.cpp  cli.cpp  load.cpp  load_architecture.cpp  main.cpp
test/: main.cpp
toolchains/: android-armv8.mk  linux-x32_64.mk  windows.mk
